--- a/Web/src/main/resources/application.properties
+++ b/Web/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# \u9879\u76EE\u8BBF\u95EE\u8DEF\u5F84
+server.servlet.context-path=/springboot
+# \u56FD\u9645\u5316\u8D44\u6E90\u6587\u4EF6\u8DEF\u5F84
+spring.messages.basename=i18n.login
+# \u7981\u7528thymeleaf\u7F13\u5B58
+spring.thymeleaf.cache=false
