--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -37,11 +37,19 @@
         </dependency>
 
         <!--web jars-->
+        <!--jquery-->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <!--bootstrap-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
