--- a/config/application.properties
+++ b/config/application.properties
@@ -1,2 +1,2 @@
-# 必须配置在模块的父模块中
-server.port=8122
+# \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0123\uFFFD\uFFFD\u0138\uFFFD\u0123\uFFFD\uFFFD\uFFFD\uFFFD
+server.port=8123
