--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -22,7 +22,22 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!--排除默认的servlet容器-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                    <groupId>org.springframework.boot</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <!--引入其他servlet容器-->
+        <dependency>
+<!--            <artifactId>spring-boot-starter-jetty</artifactId>-->
+            <artifactId>spring-boot-starter-undertow</artifactId>
+            <groupId>org.springframework.boot</groupId>
+        </dependency>
+
+
 
         <!--thymeleaf 启动器 -->
         <dependency>
