--- a/Web/src/main/resources/application.properties
+++ b/Web/src/main/resources/application.properties
@@ -4,3 +4,10 @@ server.servlet.context-path=/springboot
 spring.messages.basename=i18n.login
 # \u7981\u7528thymeleaf\u7F13\u5B58
 spring.thymeleaf.cache=false
+# \u4FEE\u6539\u65E5\u671F\u683C\u5F0F
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.date-format=yyyy-MM-dd
+
+
+# \u5D4C\u5165\u5F0Fservlet\uFF0C Tomcat\u7684\u4E13\u7528\u8BBE\u7F6E
+server.tomcat.uri-encoding=UTF-8
